# g13d

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  g13_device.cpp  g13_main.cpp  meson.build  meson_options.txt
assets/host/usr/lib/systemd/system/: g13-resume.service  g13.service
bindfiles/: default.bind
host/g13d/: default.bind
host/systemd/system/: g13d.service  g13d.target
host/udev/rules.d/: 91-g13.rules
host/usr/lib/systemd/system/: g13d-resume.service  g13d.service
include/: action.hpp  action_command.hpp  action_keys.hpp  action_pipeout.hpp  actionable.hpp  device.hpp  exceptions.hpp  font_family.hpp  g13_action.hpp  g13_action_command.hpp  g13_action_keys.hpp  g13_action_pipeout.hpp  g13_actionable.hpp  g13_device.hpp  g13_font.hpp  g13_font_char.hpp  g13_font_family.hpp  g13_fonts.hpp  g13_hotplug.hpp  g13_key.hpp  g13_key_tables.hpp  g13_keys.hpp  g13_lcd.hpp  g13_log.hpp  g13_main.hpp  g13_manager.hpp  g13_profile.hpp  g13_state_key.hpp  g13_stick.hpp  g13_stickzone.hpp  helper.hpp  helper.tpp  key.hpp  key_state.hpp  key_tables.hpp  lcd.hpp  lifecycle.hpp  log.hpp  logo.hpp  main.hpp  (+6 more)
include/Assets/: font_family.hpp  key_tables.hpp  logo.hpp
include/Objects/: Action.hpp  Action.tpp  CommandAction.hpp  Device.hpp  Font.hpp  FontCharacter.hpp  Key.hpp  KeyAction.hpp  KeyState.hpp  PipeOutAction.hpp  Profile.hpp  Screen.hpp  Stick.hpp  StickZone.hpp  action.hpp  action.tpp  action_keys.hpp  device.hpp  font.hpp  font_char.hpp  key.hpp  lcd.hpp  stick.hpp  stickzone.hpp
include/Utils/: StringFormatter.hpp  utilities.hpp  utilities.tpp
include/utilities/: escaped_string_formatter.hpp  exceptions.hpp  utilities.hpp  utilities.tpp
pkgbuild/: PKGBUILD  g13d.install
src/: action_command.cpp  action_keys.cpp  action_pipeout.cpp  device.cpp  font.cpp  font_char.cpp  g13_action.cpp  g13_action_command.cpp  g13_action_keys.cpp  g13_action_pipeout.cpp  g13_device.cpp  g13_font.cpp  g13_font_char.cpp  g13_fonts.cpp  g13_hotplug.cpp  g13_key.cpp  g13_key_tables.cpp  g13_keys.cpp  g13_lcd.cpp  g13_log.cpp  g13_main.cpp  g13_main_test.cpp  g13_manager.cpp  g13_profile.cpp  g13_state_key.cpp  g13_stick.cpp  g13_stickzone.cpp  helper.cpp  key.cpp  key_state.cpp  key_tables.cpp  lcd.cpp  lifecycle.cpp  log.cpp  main.cpp  profile.cpp  stick.cpp  stickzone.cpp  utilities.cpp
src/Objects/: CommandAction.cpp  Device.cpp  Font.cpp  FontCharacter.cpp  Key.cpp  KeyAction.cpp  KeyState.cpp  PipeOutAction.cpp  Profile.cpp  Screen.cpp  Stick.cpp  StickZone.cpp  action_command.cpp  action_keys.cpp  action_pipeout.cpp  device.cpp  font.cpp  font_char.cpp  key.cpp  key_state.cpp  lcd.cpp  profile.cpp  stick.cpp  stickzone.cpp
src/Utils/: StringFormatter.cpp  utilities.cpp
src/scripts/: g13_test.py  g13xml2config
src/utilities/: escaped_string_formatter.cpp  utilities.cpp
src/utils/: pbm2lpbm.cpp
systemd/: g13-clock.service  g13.service  g13.target
udev/: 91-g13.rules
